src/objects/MUSW__Submission__c.object
<CustomObject>
    <description>Tracks online files</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_to_public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to indicate available to public or not</description>
        <label>Available to public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <label>ContentDocumentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN_Prof_Code__c</fullName>
        <label>SAN Prof. Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
	<fullName>CustomerEnvelope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Envelope</label>
        <referenceTo>Customer_Envelope__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_Long__c</fullName>
        <label>Description Long</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_API_Name__c</fullName>
        <description>API name of the document record. This file will be provided as a hyperlink to the user to download from the submission.</description>
        <label>Document API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extid_from_Submission_List__c</fullName>
        <description>Extid from Submission List</description>
        <label>Extid from Submission List</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardcopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardcopy</label>
        <type>Checkbox</type>
    </fields>
	 <fields>
        <fullName>Disciplinary_Action_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify the date until when the disciplinary action should show up in public search</inlineHelpText>
        <label>Disciplinary Action End Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Legal_Action_Documents__c</fullName>
        <label>Legal Action Documents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed Order</fullName>
                </value>
                <value>
                    <fullName>Cease and Desist - Formal</fullName>
                </value>
                <value>
                    <fullName>Default Order - BAP</fullName>
                </value>
                <value>
                    <fullName>Default Order - Formal</fullName>
                </value>
                <value>
                    <fullName>Final Order</fullName>
                </value>
                <value>
                    <fullName>Intent to Issue Cease &amp; Desist Order</fullName>
                </value>
                <value>
                    <fullName>Permanent Cease &amp; Desist Order</fullName>
                </value>
                <value>
                    <fullName>Intent to Deny - Formal</fullName>
                </value>
                <value>
                    <fullName>Statement of Charges - BAP</fullName>
                </value>
                <value>
                    <fullName>Statement of Charges - Formal</fullName>
                </value>
                <value>
                    <fullName>Temporary Cease &amp; Desist Order</fullName>
                </value>
                <value>
                    <fullName>Order of Summary Suspension</fullName>
                </value>
                <value>
                    <fullName>Agreed Order - Amended</fullName>
                </value>
                <value>
                    <fullName>Default Order - Amended</fullName>
                </value>
                <value>
                    <fullName>Prehearing Conference Order</fullName>
                </value>
                <value>
                    <fullName>Ex Parte Order of Summary Suspension</fullName>
                </value>
                <value>
                    <fullName>Order of Director Deny Pet. 4 Recon.</fullName>
                </value>
                <value>
                    <fullName>Initial Order - BAP</fullName>
                </value>
                <value>
                    <fullName>Initial Order - Formal</fullName>
                </value>
                <value>
                    <fullName>BAP Scheduled Letter</fullName>
                </value>
                <value>
                    <fullName>Intent to Deny - BAP</fullName>
                </value>
                <value>
                    <fullName>SOC-Notice of Order of Sum. Susp.</fullName>
                </value>
                <value>
                    <fullName>Subpoena</fullName>
                </value>
                <value>
                    <fullName>Order Vacating Default Order</fullName>
                </value>
                <value>
                    <fullName>Response to Petition For Review</fullName>
                </value>
                <value>
                    <fullName>Petition For Review</fullName>
                </value>
                <value>
                    <fullName>Cease and Desist - BAP</fullName>
                </value>
                <value>
                    <fullName>Education Letter</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Include_in_Hearing_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the document is a part of the hearing file.</inlineHelpText>
        <label>Include in Hearing File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Backend_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether it is backend submission or not</description>
        <label>Is Backend Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hearing and Settlement</label>
        <referenceTo>Legal_Activity__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LicenseQuestionKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This combination key of license Id and question field API name is unique and external ID</description>
        <externalId>true</externalId>
        <label>LicenseQuestionKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Renewal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to License Renewal/Renewal Application</description>
        <label>License Renewal</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Action_Link__c</fullName>
        <description>To add custom Actions to clients, duplicate this field, add custom landing URL, and add it to the fieldset</description>
        <formula>IF(ISBLANK( MUSW__Submission_DateTime__c), HYPERLINK(&quot;/p/attach/NoteAttach?pid=&quot; + Id + &quot;&amp;parentname=&quot; + Name + &quot;&amp;retURL=%2F&quot; + Id, &quot;Upload&quot;) + IF(NOT(ISBLANK( MUSW__Link__c )), &quot; / &quot; + HYPERLINK( MUSW__Link__c, &quot;Download Form&quot;), &quot;&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_External_File_Id__c</fullName>
        <description>For Bluebeam files, this is &lt;Project Id&gt;:&lt;File Id&gt;</description>
        <externalId>true</externalId>
        <label>External File Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__BG_File_Location_Type__c</fullName>
        <description>Location of the document or file related to this submission record. Default is Salesforce</description>
        <inlineHelpText>Location of the document or file related to this submission record.</inlineHelpText>
        <label>File Location Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Bluebeam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__License2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Requested_DateTime__c</fullName>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review</label>
        <referenceTo>MUSW__Review__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Submission_DateTime__c</fullName>
        <label>Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Approved_Reviews__c</fullName>
        <label>Total Approved Reviews</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Failed_Reviews__c</fullName>
        <label>Total Failed Reviews</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Reviews__c</fullName>
        <label>Total Reviews</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__View_Links__c</fullName>
        <label>View</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Master_Submission_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup on Master Submission List</description>
        <label>Master Submission List</label>
        <referenceTo>MUSW__Master_Submission_List__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profession_Code__c</fullName>
        <label>Profession Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <formula>IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = &quot;&quot;), 
	If(OR(ISNULL( MUSW__Application2__c ), MUSW__Application2__c = &quot;&quot;), 
		IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = &quot;&quot;), 
	&quot;&quot;, HYPERLINK( &quot;../&quot; &amp; MUSW__License2__c, MUSW__License2__r.Name ,&quot;_parent&quot; )), 
	HYPERLINK( &quot;../&quot; &amp; MUSW__Application2__c,MUSW__Application2__r.Name,&quot;_parent&quot; )), 
	HYPERLINK( &quot;../&quot; &amp; MUSW__Permit2__c,MUSW__Permit2__r.Name,&quot;_parent&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAN_Area_Code__c</fullName>
        <description>Area code of image processed</description>
        <label>SAN Area Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN_Department_Code__c</fullName>
        <description>Child departments under the areas</description>
        <label>SAN Department Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN_Image_Name__c</fullName>
        <description>Name of the image</description>
        <label>SAN Image Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN_Image_Status__c</fullName>
        <description>Status of the Image processed by KOFAX</description>
        <label>SAN Image Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAN_Image_Type__c</fullName>
        <description>Business area of the image scanned</description>
        <label>SAN Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Supporting</fullName>
                </value>
                <value>
                    <fullName>Import Images</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAN_Image_URL__c</fullName>
        <description>URL of the image on SAN</description>
        <label>SAN Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAN_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for SAN submission file</description>
        <label>SAN Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Request_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_For_Credential_Reinstatement__c</fullName>
        <description>Returns true if a submission is to be displayed for Credential Reinstatement</description>
        <formula>IF((ISBLANK(Master_Submission_List__c) &amp;&amp; NOT(ISNULL(License_Renewal__c)) &amp;&amp; TEXT(License_Renewal__r.Renewal_Reinstatement_Type__c) == &apos;Reinstatement&apos; ) || 
(INCLUDES( Master_Submission_List__r.Show_For__c ,&apos;Credential Reinstatement&apos;)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show For Credential Reinstatement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_For_Credential_Renewal__c</fullName>
        <description>Returns true if a submission is to be displayed for Credential Renewal</description>
        <formula>IF((ISBLANK(Master_Submission_List__c) &amp;&amp;  NOT(ISNULL(License_Renewal__c)) &amp;&amp;  TEXT(License_Renewal__r.Renewal_Reinstatement_Type__c) == &apos;Renewal&apos; ) || 
(INCLUDES( Master_Submission_List__r.Show_For__c,&apos;Credential Renewal&apos;)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show For Credential Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_For_Credential__c</fullName>
        <description>Returns true if a submission is to be displayed for Credential</description>
        <formula>IF(((ISBLANK(Master_Submission_List__c) &amp;&amp;  MUSW__License2__c != null) || 
INCLUDES( Master_Submission_List__r.Show_For__c,&apos;Credential&apos;)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show For Credential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_For_Permit_Renewal__c</fullName>
        <formula>IF((ISBLANK(Master_Submission_List__c) &amp;&amp; NOT(ISNULL(License_Renewal__c)) &amp;&amp; TEXT(License_Renewal__r.Renewal_Reinstatement_Type__c) == &apos;RenewalPTO&apos; ) || 
(INCLUDES( Master_Submission_List__r.Show_For__c,&apos;Permit Renewal&apos;)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show For Permit Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_For_Permit__c</fullName>
        <formula>IF(((ISBLANK(Master_Submission_List__c) &amp;&amp; MUSW__Permit2__c != null) || 
INCLUDES( Master_Submission_List__r.Show_For__c,&apos;Permit&apos;)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show For Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status = Accepted when the document satisfies the submission requirement. Status = Additional Info. Required when the document does not satisfy the submission requirement and should be sent back to the Applicant.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Additional Info. Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Physical_Exhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the document is a physical exhibit.</inlineHelpText>
        <label>Physical Exhibit</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Public_Disciplinary_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to make the disciplinary action public</description>
        <inlineHelpText>Check this box to make the disciplinary action public</inlineHelpText>
        <label>Public Disciplinary Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field indicates whether an applicant/licensee should upload a hardcopy or softcopy submission, or whether the document is Board Action and should appear in the license lookup.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Submission_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_API_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>MUSW__Description__c</columns>
        <columns>Description_Long__c</columns>
        <columns>MUSW__License2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Submission_Queue_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Submission Queue</label>
        <queue>Submission_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Submissions_Queue_Submission</fullName>
        <filterScope>Queue</filterScope>
        <label>Submissions Queue</label>
        <queue>Submissions_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
	<listViews>
        <fullName>RBS_Queue</fullName>
        <columns>Validation_Number__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CustomerEnvelope__c</columns>
        <columns>Default_Prof_Type__c</columns>
        <columns>SAN_Image_URL__c</columns>
        <columns>SAN_File_Link__c</columns>
        <columns>MUSW__License2__c</columns>
        <columns>License_Renewal__c</columns>
        <columns>Request__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAN_Prof_Code__c</field>
            <operation>contains</operation>
            <value>20810,21701,23201,23203,23207,24001,24002,24003,24004,24005,24006,24008,24009,29940,24901,23251,23252,20401,20402,20403,20405,20811,21702,21703,23204,23206</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>CustomerEnvelope__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>RBS Queue</label>
    </listViews>
    <listViews>
        <fullName>RBS_Unresolved_Submissions</fullName>
        <columns>NAME</columns>
        <columns>CustomerEnvelope__c</columns>
        <columns>MUSW__License2__c</columns>
        <columns>SAN_Image_Name__c</columns>
        <columns>SAN_File_Link__c</columns>
        <columns>Profession_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomerEnvelope__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SAN_Prof_Code__c</field>
            <operation>equals</operation>
            <value>20810,21701,23201,23203,23207,24001,24002,24003,24004,24005,24006,24008,24009,29940,24901,23251,23252,20401,20402,20403,20405,20811,21702,21703,23204,23206</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted</value>
        </filters>
        <label>RBS - Unresolved Submissions</label>
    </listViews>
    <listViews>
        <fullName>RE_Queue</fullName>
        <columns>Validation_Number__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CustomerEnvelope__c</columns>
        <columns>Default_Prof_Type__c</columns>
        <columns>SAN_File_Link__c</columns>
        <columns>MUSW__License2__c</columns>
        <columns>License_Renewal__c</columns>
        <columns>Request__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SAN_Prof_Code__c</field>
            <operation>equals</operation>
            <value>27706,27708,25601,27010,27011,27016,27017,27030,21804,21805,27035,27012,27036,27037,27032</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Accepted</value>
        </filters>
        <filters>
            <field>CustomerEnvelope__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>RE Queue</label>
    </listViews>
    <listViews>
        <fullName>RE_Unresolved_Submissions</fullName>
        <columns>NAME</columns>
        <columns>CustomerEnvelope__c</columns>
        <columns>MUSW__License2__c</columns>
        <columns>SAN_Image_Name__c</columns>
        <columns>SAN_File_Link__c</columns>
        <columns>Profession_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CustomerEnvelope__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SAN_Prof_Code__c</field>
            <operation>equals</operation>
            <value>27706,27708,25601,27010,27011,27016,27017,27030,21804,21805,27035,27012,27036,27037,27032</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Submitted</value>
        </filters>
        <label>RE - Unresolved Submissions</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Create_Submission_By_Delegate__c</fullName>
        <label>Create Submission By Delegate</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Insert_Submission_Share__c</fullName>
        <label>Insert Submission Share</label>
    </sharingReasons>
</CustomObject>